test/mlir/broadcast_bad_case_2.mlir.stderr
test/mlir/broadcast_bad_case_2.mlir:3:10: error: 'colgm.broadcast' op input dim 2 != output dim 5
    %0 = colgm.broadcast %arg {target_shape = [5, 3, 4]} : tensor<2x3x4xf32> -> tensor<5x3x4xf32>
         ^
test/mlir/broadcast_bad_case_2.mlir:3:10: note: see current operation: %0 = "colgm.broadcast"(%arg0) {target_shape = [5, 3, 4]} : (tensor<2x3x4xf32>) -> tensor<5x3x4xf32>
